--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -26,7 +26,7 @@
         },
         {
             "before": ["ctrl+d"],
-            "after": ["<Esc>", "l", "x"],
+            "after": ["<Esc>", "l", "x"]
         }
     ],
     "vim.visualModeKeyBindings": [
@@ -132,22 +132,22 @@
     "go.languageServerFlags": [
         "-rpc.trace", // for more detailed debug logging
         "serve",
-        "--debug=localhost:6060", // to investigate memory usage, see profiles
+        "--debug=localhost:6060" // to investigate memory usage, see profiles
     ],
     "[go]": {
         "editor.rulers": [120],
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true,
+            "source.organizeImports": true
         },
         // Optional: Disable snippets, as they conflict with completion ranking.
-        "editor.snippetSuggestions": "none",
+        "editor.snippetSuggestions": "none"
     },
     "[go.mod]": {
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true,
-        },
+            "source.organizeImports": true
+        }
     },
     "gopls": {
         // Add parameter placeholders when completing a function.
@@ -155,7 +155,7 @@
 
         // If true, enable additional analyses with staticcheck.
         // Warning: This will significantly increase memory usage.
-        "staticcheck": false,
+        "staticcheck": false
     },
     "go.toolsManagement.autoUpdate": true,
     "editor.fontFamily": "Cascadia Code",
@@ -169,5 +169,5 @@
     "workbench.statusBar.visible": false, // removes the status bar
     "scm.diffDecorations": "none",
     "editor.guides.indentation": false,
-    "workbench.activityBar.visible": false,
+    "workbench.activityBar.visible": false
 }
