--- a/.gitconfig
+++ b/.gitconfig
@@ -66,6 +66,7 @@
 	insteadOf = https://github.com/
 [core]
 	pager = diff-so-fancy | less --tabs=4 -RFX
+	editor = nvim
 [color "diff-highlight"]
 	oldNormal = red bold
 	oldHighlight = red bold 52
