--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -2,6 +2,7 @@
   handle_size = -3
   borderless = True
   tab_position = bottom
+  inactive_color_offset = 0.8079470198675497
 [keybindings]
   go_up = <Alt>k
   go_down = <Alt>j
@@ -16,13 +17,15 @@
   layout_launcher = <Shift><Alt>l
 [profiles]
   [[default]]
+    allow_bold = False
     background_darkness = 0.9
-    background_type = transparent
     cursor_blink = False
     cursor_color = "#999999"
-    font = Cascadia Code 11
+    font = Cascadia Code 12
+    foreground_color = "#ffffff"
     show_titlebar = False
     scrollbar_position = hidden
+    palette = "#282828:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#a89984:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
     use_system_font = False
 [layouts]
   [[default]]
