--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Cascadia Code
+font_family      Source Code Pro
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -23,7 +23,7 @@ font_family      Cascadia Code
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12
+font_size 10
 
 #: Font size (in pts)
 
@@ -46,7 +46,7 @@ font_size 12
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-# adjust_line_height  0
+# adjust_line_height 0
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
