--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,12 @@ adjust_line_height	1
 cursor_blink_interval	0
 
 # Keymaps
-map ctrl+shift+enter	launch --cwd=current
+map alt+enter	launch --cwd=current
+# vim-like navigation
+map alt+h neighboring_window left
+map alt+l neighboring_window right
+map alt+j neighboring_window down
+map alt+k neighboring_window up
 
 # Window borders
 window_border_width		0
