--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,3 +25,6 @@ window_border_width		0
 window_margin_width		0
 window_padding_width	0
 placement_strategy		top-left
+
+# Theme
+include ./nord.conf
