--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,10 +21,11 @@ map alt+j neighboring_window down
 map alt+k neighboring_window up
 
 # Window borders
-window_border_width		0
+window_border_width		0.5pt
 window_margin_width		0
 window_padding_width	0
 placement_strategy		top-left
 
 # Theme
 include ./nord.conf
+active_border_color	#dddddd
