--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,10 +15,12 @@ cursor_blink_interval	0
 # Keymaps
 map alt+enter launch --cwd=current
 # vim-like navigation
-map alt+h neighboring_window left
-map alt+l neighboring_window right
-map alt+j neighboring_window down
-map alt+k neighboring_window up
+allow_remote_control yes
+listen_on unix:@mykitty
+map alt+j kitten pass_keys.py neighboring_window bottom alt+j
+map alt+k kitten pass_keys.py neighboring_window top    alt+k
+map alt+h kitten pass_keys.py neighboring_window left   alt+h
+map alt+l kitten pass_keys.py neighboring_window right  alt+l
 
 # Window borders
 window_border_width	0.5pt
