kitty: cursor block

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,6 +11,8 @@ adjust_line_height	1
 
 # Cursor
 cursor_blink_interval	0
+cursor_shape		block
+shell_integration	no-cursor
 
 # Keymaps
 map alt+enter launch --cwd=current
