vscode: update styles

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -121,9 +121,11 @@
        }
     ],
     "workbench.colorCustomizations": {
-        "statusBar.background": "#007acc",
-        "statusBar.noFolderBackground": "#007acc",
-        "statusBar.debuggingBackground": "#007acc"
+        "statusBar.background": "#005f5f",
+        "statusBar.noFolderBackground": "#005f5f",
+        "statusBar.debuggingBackground": "#005f5f",
+        "statusBar.foreground": "#ffffff",
+        "statusBar.debuggingForeground": "#ffffff"
     },
     "go.formatTool": "goimports",
     "go.lintTool": "golangci-lint",
