kitty: Use FiraCode font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,13 +1,13 @@
 # Font
-font_family		Source Code Pro Semibold
-bold_font		Source Code Pro Semibold
-italic_font		Source Code Pro Semibold
-bold_italic_font	Source Code Pro Semibold
+font_family		FiraCode Nerd Font
+bold_font		FiraCode Nerd Font
+italic_font		FiraCode Nerd Font
+bold_italic_font	FiraCode Nerd Font
 font_size		10
 disable_ligatures	cursor
 
 # Line height
-adjust_line_height	1
+adjust_line_height	110%
 
 # Cursor
 cursor_blink_interval	0
