--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -33,5 +33,5 @@ window_padding_width	0
 placement_strategy	top-left
 
 # Theme
-include ./nord.conf
+include ${THEME}.conf
 active_border_color	#dddddd
