kitty: use kitten for themes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -33,5 +33,5 @@ window_padding_width	0
 placement_strategy	top-left
 
 # Theme
-include ${THEME}.conf
+include ${THEME}-theme.conf
 active_border_color	#dddddd
