--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,8 +23,8 @@ map alt+j kitten pass_keys.py neighboring_window bottom alt+j
 map alt+k kitten pass_keys.py neighboring_window top    alt+k
 map alt+h kitten pass_keys.py neighboring_window left   alt+h
 map alt+l kitten pass_keys.py neighboring_window right  alt+l
-# Zoom in/out
-map alt+i toggle_layout stack
+# Toggle maximize
+map alt+m toggle_layout stack
 
 # Window borders
 window_border_width	0.5pt
