kitty: manual vsplit/hsplit

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,8 +14,12 @@ cursor_blink_interval	0
 cursor_shape		block
 shell_integration	no-cursor
 
+# Layouts
+enabled_layouts splits,stack
+
 # Keymaps
-map alt+enter launch --cwd=current
+map alt+i launch --cwd=current --location=vsplit
+map alt+o launch --cwd=current --location=hsplit
 # vim-like navigation
 allow_remote_control yes
 listen_on unix:@mykitty
