kitty: no wayland title bar pls

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -29,6 +29,9 @@ map alt+j kitten pass_keys.py neighboring_window bottom alt+j
 map alt+k kitten pass_keys.py neighboring_window top    alt+k
 map alt+l kitten pass_keys.py neighboring_window right  alt+l
 
+# Enforce better title bar
+linux_display_server x11
+
 # Window borders
 window_border_width	0.5pt
 window_margin_width	0
