kitty: add close window shortcut

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,6 +21,7 @@ enabled_layouts splits,stack
 map alt+i launch --cwd=current --location=vsplit
 map alt+o launch --cwd=current --location=hsplit
 map alt+m toggle_layout stack
+map alt+q close_window
 # vim-like navigation
 allow_remote_control yes
 listen_on unix:@mykitty
