--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -29,6 +29,11 @@ map alt+h kitten pass_keys.py neighboring_window left   alt+h
 map alt+j kitten pass_keys.py neighboring_window bottom alt+j
 map alt+k kitten pass_keys.py neighboring_window top    alt+k
 map alt+l kitten pass_keys.py neighboring_window right  alt+l
+# Resize windows
+map kitty_mod+shift+left resize_window wider 2
+map kitty_mod+shift+right resize_window narrower 2
+map kitty_mod+shift+up resize_window taller 2
+map kitty_mod+shift+down resize_window shorter 2
 
 # Enforce better title bar
 linux_display_server x11
