--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # Font
-font_family		FiraCode Nerd Font
-bold_font		FiraCode Nerd Font
-italic_font		FiraCode Nerd Font
-bold_italic_font	FiraCode Nerd Font
-font_size		10
+font_family		Source Code Pro
+bold_font		Source Code Pro
+italic_font		Source Code Pro
+bold_italic_font	Source Code Pro
+font_size		12
 disable_ligatures	cursor
 
 # Line height
