--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # Font
-font_family		Source Code Pro
-bold_font		Source Code Pro
-italic_font		Source Code Pro
-bold_italic_font	Source Code Pro
-font_size		11
+font_family		Droid Sans Mono
+bold_font		Droid Sans Mono
+italic_font		Droid Sans Mono
+bold_italic_font	Droid Sans Mono
+font_size		10
 disable_ligatures	cursor
 
 # Line height
