kitty: use kitten themes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -44,6 +44,8 @@ window_margin_width	0
 window_padding_width	0
 placement_strategy	top-left
 
-# Theme
-include ${THEME}-theme.conf
-active_border_color	#dddddd
+# BEGIN_KITTY_THEME
+# Adapta Nokto Maia
+include current-theme.conf
+# END_KITTY_THEME
+# active_border_color	#dddddd
