kitty: use kitten to select themes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -45,7 +45,7 @@ window_padding_width	0
 placement_strategy	top-left
 
 # BEGIN_KITTY_THEME
-# Adapta Nokto Maia
+# Nord
 include current-theme.conf
 # END_KITTY_THEME
 # active_border_color	#dddddd
