vscode: replace with leader

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -19,7 +19,7 @@
     "vim.leader": ",",
     "vim.insertModeKeyBindings": [
         {
-            "before": [",","s"],
+            "before": ["leader","s"],
             "after": ["<Esc>"],
             "commands": ["workbench.action.files.save"]
         },
