vscode: fix only command

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -81,7 +81,7 @@
        },
        {
             "before": ["leader", "w"],
-            "commands": [":only!"]
+            "commands": [":only"]
        },
        {
            "before": ["C-l"],
