vscode: disable editor lightbulb

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -173,4 +173,5 @@
         "statusBar.foreground": "#ffffff",
         "statusBar.debuggingForeground": "#ffffff"
     },
+    "editor.lightbulb.enabled": "off",
 }
