vscode: refactor/fix vim keystrokes

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -26,6 +26,14 @@
         {
             "before": ["ctrl+d"],
             "after": ["<Esc>", "l", "x"]
+        },
+        {
+            "before": ["f", "d"],
+            "after": ["<Esc>"]
+        },
+        {
+            "before": ["ctrl+g"],
+            "after": ["<Esc>"]
         }
     ],
     "vim.visualModeKeyBindings": [
