--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -22,18 +22,18 @@ map alt+i launch --cwd=current --location=vsplit
 map alt+o launch --cwd=current --location=hsplit
 map alt+m toggle_layout stack
 map alt+q close_window
-# vim-like navigation
-allow_remote_control yes
-listen_on unix:@mykitty
-map alt+h kitten pass_keys.py neighboring_window left   alt+h
-map alt+j kitten pass_keys.py neighboring_window bottom alt+j
-map alt+k kitten pass_keys.py neighboring_window top    alt+k
-map alt+l kitten pass_keys.py neighboring_window right  alt+l
+# Window navigation
+map alt+h neighboring_window left
+map alt+j neighboring_window bottom
+map alt+k neighboring_window top
+map alt+l neighboring_window right
 # Resize windows
 map kitty_mod+shift+left resize_window wider 2
 map kitty_mod+shift+right resize_window narrower 2
 map kitty_mod+shift+up resize_window taller 2
 map kitty_mod+shift+down resize_window shorter 2
+# Open new tabs in current dir
+map kitty_mod+t launch --cwd=current --type=tab
 
 # Enforce better title bar
 linux_display_server x11
