vscodium: disable terminal key chords

--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -180,4 +180,5 @@
 
     "window.menuBarVisibility": "toggle",
     "terminal.integrated.shellIntegration.decorationsEnabled": "never",
+    "terminal.integrated.allowChords": false,
 }
