vscodium: keep cursor after yanking in visual mode

--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -55,6 +55,10 @@
            "before": ["<C-s>"],
            "commands": ["workbench.action.findInFiles"],
        },
+       {
+           "before": ["y"],
+           "after": ["y", "g", "v", "<Esc>"],
+       },
     ],
     "vim.normalModeKeyBindings": [
        {
