--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -142,6 +142,14 @@
         "staticcheck": false
     },
     "go.toolsManagement.autoUpdate": true,
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        },
+    },
+    "isort.args":["--profile", "black"],
 
     "catppuccin.boldKeywords": false,
     "catppuccin.italicComments": false,
